<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>ai.floedb.metacat</groupId>
  <artifactId>metacat</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>metacat-root</name>
  <description>Metacat, Root</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <quarkus.platform.version>3.29.2</quarkus.platform.version>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <skipUTs>false</skipUTs>
    <skipITs>false</skipITs>
    <jvm.args>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.args>
  </properties>

  <modules>
    <module>proto</module>
    <module>types</module>
    <module>client-cli</module>
    <module>storage-spi</module>
    <module>storage-memory</module>
    <module>storage-aws</module>
    <module>reconciler</module>
    <module>connectors-spi</module>
    <module>connectors-iceberg</module>
    <module>connectors-delta</module>

    <module>service</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.spotify.fmt</groupId>
          <artifactId>fmt-maven-plugin</artifactId>
          <version>2.29</version>
          <dependencies>
            <dependency>
              <groupId>com.google.googlejavaformat</groupId>
              <artifactId>google-java-format</artifactId>
              <version>1.30.0</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine> -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager
          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine> -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>